fix: se corrigio el titulo de los paneles para darle una mejor visibilidad

--- a/maqueta/assets/css/styles.css
+++ b/maqueta/assets/css/styles.css
@@ -179,7 +179,7 @@ header nav a,
 
 .page-title {
   font-size: 24px;
-  color: var(--text-dark);
+  color: var(--white)
 }
 
 /* ===== PERFIL DE USUARIO ===== */
